trunk/Archive2/1f/ac182107494589/output
main.cpp: In function 'std::unique_ptr<int> foo()':
main.cpp:8:8: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = int; _Dp = std::default_delete<int>]'
 return p;
        ^
In file included from /usr/local/include/c++/4.9.2/memory:81:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
